// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Signup with error prop correctly 1`] = `
<div
  className="container"
>
  <h1>
    Sign Up
  </h1>
  <div>
    test error
  </div>
  <Form
    buttonText="Sign Up"
    handleSubmit={[Function]}
  />
</div>
`;

exports[`w/out props renders Signup correctly 1`] = `
<div
  className="container"
>
  <h1>
    Sign Up
  </h1>
  <Form
    buttonText="Sign Up"
    handleSubmit={[Function]}
  />
</div>
`;
